--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -18,15 +18,15 @@ here::i_am("Final_Project.Rmd")
 
 ## Introduction
 
-Recently, mandatory vaccinations have come under fire. However, two decades of policy effort aimed at increasing the vaccination coverage of various vaccines among the youth population. The goal of this analysis is to assess the efforts of programs increasing vaccination coverage among various subgroups and identify which groups future should target.
+Recently, mandatory vaccinations have come under fire. However, the last two decades of policy effort attempted increasing the vaccination coverage of various vaccines among the youth population. The goal of this analysis is to assess the efforts of programs increasing vaccination coverage among various subgroups and identify which groups future interventions should target.
 
-The data for this analysis comes from the Center for Disease Control (CDC) and is public record. The dataset contains information on estimated vaccine coverage among adolescents aged 13-17. Estimated vaccination coverages are further subsetted based on various characteristics including, vaccine type, number of doses, geography/location, survey year, survey dimension (type & value), 95% CI, and sample size.
+The data for this analysis comes from the Center for Disease Control (CDC) and is public record. The dataset contains information on estimated vaccine coverage among adolescents aged 13-17. Estimated vaccination coverage is further subset based on various characteristics including, vaccine type, number of doses, geography/location, survey year, survey dimension (type & value), 95% CI, and sample size.
 
-This analysis specifically focuses on how full vaccination coverages has changed over time for each vaccine included in the data. Only estimates including those from the age 13-17 who have received the number of doses required for full coverage are considered. Based on the results, recommendations will be made for which vaccination types should increase the number of implemented programs to increase coverage. Additionally, additional sub-analyses on vaccines with low coverages will be performed to determine which geographic locations should be targetted.
+This analysis specifically focuses on how full vaccination coverage has changed over time for each vaccine included in the data. Only estimates including those from the age 13-17 who have received the number of doses required for full coverage are considered. Based on the results, recommendations will be made for which vaccinations policy and interverventions should focus on to increase coverage. 
 
 ## Tabular Analysis
 
-The table below shows the weighted averaages of vaccine coverage by vaccine type and year. Patrially vaccinated individuals are excluded.
+The table below shows the weighted averages of vaccine coverage by vaccine type and year. Partially vaccinated individuals are excluded.
 ```{r, table1, fig.align = 'center'}
 library(flextable)
 table1<- readRDS(file = here::here("output/table_1.rds"))
@@ -40,3 +40,7 @@ The line chart below shows the weighted averaages of vaccine coverage by vaccine
 ```{r, create-line-chart, fig.align = 'center'}
 knitr::include_graphics(here::here("output/graph1.png"))
 ```
+
+##Results
+
+Vaccination coverage among all types of vaccines has been increasing since 2014 in adolescents. Of these vaccinations, HPV has the lowest coverage rate and has plateaued in recent years. The HPV vaccine prevents the human papilloma virus, as well known cause of various cancers among women. There is often stigma associated with HPV due it being classified as an STI. Future interventions should focus on de-stigmitizing this vaccine and encourage more parents to vaccinate their children against HPV during their teenage years when it is most effective.
